syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
package com.galvao.wallet.grpc;

message TransactionRequest {
  int64 userId = 1;
  double amount = 2;
  Currency currency = 3;
}

enum Currency {
  GBP = 0;
  EUR = 1;
  USD = 2;
}

message Transaction {
  int64 accountId = 1;
  int64 userId = 2;
  double amount = 3;
  Currency currency = 4;
  enum Type {
    DEPOSIT = 0;
    WITHDRAW = 1;
  }
  Type type = 5;
}

message BalanceRequest {
  int64 userId = 1;
}

message BalanceResponse {
  int64 userId = 1;
  double gbpAmount = 2;
  double eurAmount = 3;
  double usdAmount = 4;
}

service TransactionService {
  rpc deposit (TransactionRequest) returns (google.protobuf.Empty);
  rpc withdraw (TransactionRequest) returns (google.protobuf.Empty);
  rpc balance (BalanceRequest) returns (BalanceResponse);
}
